--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ install:
 
 before_script:
   - mysql -uroot -e 'GRANT ALL ON *.* TO nobody@"localhost" IDENTIFIED BY "nobody"'
-  - mysql -e 'CREATE DATABASE `cl-dbi`'
-  - psql -c 'create database "cl-dbi";' -U postgres
+  - mysql -e 'CREATE DATABASE `dbi-cp`'
+  - psql -c 'create database "dbi-cp";' -U postgres
   - psql -c "CREATE USER nobody WITH PASSWORD 'nobody';" -U postgres
 
 script:
